tdf#123058 qt5 fpicker: Honor autoextension setting

Store the file extension associated with the named
filters in a map, and use that information to
set the default file extension in QFileDialog
accordingly if the corresponding checkbox in the dialog
is enabled.

Change-Id: I66f4f35da5d4378ac6337429e39260a4ed710a24
Reviewed-on: https://gerrit.libreoffice.org/67392
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>